refact: receving params via env

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,11 +7,11 @@ spring:
       client:
         registration:
           google:
-            client-id: ...
-            client-secret: ...
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
           github:
-            client-id: ...
-            client-secret: ...
+            client-id: ${GITHUB_CLIENT_ID}
+            client-secret: ${GITHUB_CLIENT_SECRET}
 
 logging:
   level:
